# VRL-YOLO-GUI

./: .gitignore  CHANGELOG.md  CLAUDE.md  COMMERCIAL-LICENSE.md  NOTICE  PLAN.md  README.md  pnpm-lock.yaml  pyproject.toml
.github/workflows/: release.yml
apps/web/: .gitignore  next.config.mjs  package.json  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: sidebar.tsx  topbar.tsx
apps/web/lib/: api.ts  batch.ts  changelog.ts  format-date.ts  hooks.ts  predict-palette.ts  report-export.ts  settings.ts  train-store.ts  training-defaults.ts  types.ts  utils.ts
assets/install/macos/: README-MACOS-FIRST-RUN.txt  install.command
docs/: CARRY-FORWARDS.md  COLAB-GUIDE.md  FUTURE-FEATURES.md  PHASE-STATUS.md  PILOT-PARTIAL-PROPOSAL.md  PILOT-TEST.md  PLAN-F1.md  PLAN-F2.md  PLAN-F3.md  PLAN-F4.md  PLAN-F6a.md  PLAN-F6b.md  PLAN-P6.md
notebooks/: 01_train_detect_colab.ipynb  02_train_classify_colab.ipynb
notebooks/_runtime/: colab_runner.py  colab_server.py  colab_tunnel.py
scripts/: README.md  _common.py  build-release.py  fetch-models.py  generate-splash.py  run-both.py  run-desktop.py  run-web.py
server/: __init__.py  main.py
server/vrl_yolo/: __init__.py  config.py  paths.py
server/vrl_yolo/api/: __init__.py  app.py  deps.py  lifespan.py  schemas.py
server/vrl_yolo/engine/: __init__.py  _runner_common.py  colab.py  colab_reader.py  dataset.py  event_log.py  explain.py  hardware.py  history_db.py  inference.py  presets.py  registry.py  reports.py  train_runner.py  (+1 more)
src-pyloid/: main.py  pyloid.config.json
tests/: test_colab_integration_smoke.py  test_colab_server_smoke.py  test_datasets_library.py  test_datasets_naming.py  test_explain.py  test_history.py  test_models_api.py  test_training_naming.py
(+39 files in other folders)
