[project]
name = "vrl-yolo-gui"
version = "0.11.0"
description = "VRL YOLO GUI — clinician-facing desktop toolkit for YOLO detection and classification in histopathology and hematology."
readme = "README.md"
requires-python = ">=3.11"
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [{ name = "Atul Tiwari", email = "atultiwari.in@gmail.com" }]

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "python-multipart>=0.0.9",
    "websockets>=13.1",
    "numpy>=1.26,<3.0",
    "pillow>=10.4",
    "opencv-python>=4.10",
    "scikit-image>=0.24",
    "tifffile>=2024.9.20",
    "reportlab>=4.2",
    "openpyxl>=3.1",
    "pyyaml>=6.0",
    "python-slugify>=8.0",
]

[project.optional-dependencies]
desktop = [
    "pyloid>=0.27",
]
ml = [
    "torch>=2.4",
    "torchvision>=0.19",
    "ultralytics>=8.3",
]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.7",
    "mypy>=1.13",
    "pyinstaller>=6.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["server/vrl_yolo"]

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "TID"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["server"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests that require a GPU/MPS accelerator",
]
